Fix overflow for items that have long words in their content

--- a/client/stylesheets/summit2014.less
+++ b/client/stylesheets/summit2014.less
@@ -200,3 +200,6 @@ ul.pick-image {
 .media, .media-body {
   overflow: inherit;
 }
+.media-body p {
+  overflow: hidden;
+}
